# ChromaPeel

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  chromapeel_gui.py  clipboard_utils.py  grid_split.py  imageAlpha.py  manual_crop.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: deploy-web.yml  test.yml
chromapeel_gui/: __init__.py  app.py  dialogs.py  settings_store.py  widgets.py
chromapeel_gui/dialogs/: __init__.py  _clipboard.py  grid_split.py  manual_crop.py
tests/: _web_server.js  conftest.py  js_parity_runner.js  js_parity_runner.mjs  test_clipboard_utils.py  test_grid_split.py  test_gui_import.py  test_image_alpha.py  test_js_parity.py  test_manual_crop.py  test_settings_store.py  web_e2e.js  web_smoke.js
web/: algorithm.js  app.js  chroma.js  clipboard.js  crop.js  dom.js  grid.js  history.js  index.html  main.js  mode.js  state.js  styles.css  util.js  zip.js
