[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chromapeel"
dynamic = ["version"]
description = "Chroma-key (single color) remover with Tkinter GUI and web port"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "star001", email = "xo0523xo@naver.com" }]
keywords = ["chroma-key", "alpha", "image", "transparency", "pillow"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "Pillow",
  "numpy",
  "tkinterdnd2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Star001-KR/ChromaPeel"
Issues   = "https://github.com/Star001-KR/ChromaPeel/issues"

[project.scripts]
chromapeel-cli = "imageAlpha:_run_cli"
chromapeel-crop = "manual_crop:_run_cli"

[project.gui-scripts]
chromapeel = "chromapeel_gui:main"

[tool.setuptools]
py-modules = ["imageAlpha", "chromapeel_gui", "clipboard_utils", "manual_crop"]

[tool.setuptools.dynamic]
version = { attr = "imageAlpha.__version__" }
